fix input overflow

--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -61,6 +61,7 @@ input
   outline: none
   width: 100%
   border-bottom: 1px solid #999
+  overflow: hidden
 .input-name
   margin: 2px
 
