--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -51,7 +51,8 @@ input {
   padding: 0 5px;
   outline: none;
   width: 100%;
-  border-bottom: 1px solid #999; }
+  border-bottom: 1px solid #999;
+  overflow: hidden; }
 
 .input-name {
   margin: 2px; }
